# license-store

./: AUTHORS  Cargo.toml  LICENSE  NOTICE  README.md
examples/: annotate-text.rs  basic.rs
src/: lib.rs  license.rs  preproc.rs  strategy.rs
src/store/: analyze.rs  base.rs  cache.rs  spdx.rs
tests/: introspection.rs  real_world.rs  store_sanity.rs
tests/common/: mod.rs
