[package]
name = "license-store"
description = "a library to detect the contents of license files"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/compenguy/license-store.git"
# Removed Jacob Peddicord <peddicor@amazon.com> as an author
# This is not intended to be a malicious act of denying credit, but rather intended
# to prevent him from being contacted with requests/issues/concerns/etc relating to
# this fork.
# Jacob, if you want to be credited here, I'm more than happy to add you back.
authors = ["Will Page <peddicor@amazon.com>"]
readme = "README.md"

[features]
default = ["spdx"]
spdx = ["serde_json", "spdx-dataset"]

[dependencies]
failure = "0.1.1"
flate2 = { version = "1.0.4", features = ["rust_backend"], default_features = false }
lazy_static = "1.0.0"
log = "0.4.1"
regex = "0.2.10"
rmp-serde = "0.13.7"
serde = "1.0.33"
serde_derive = "1.0.33"
unicode-normalization = "0.1.5"
rayon = "1.0.1"

# spdx deps
serde_json = { version = "1.0.11", optional = true }

[dev-dependencies]
env_logger = "0.5.5"

[build-dependencies]
spdx-dataset = { git = 'https://github.com/compenguy/spdx-dataset', optional = true }
